# taudata

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  gen_ref_pages.py  index.md  mkdocs.yml
src/taudata/: __init__.py  _io.py  _validation.py
tests/: __init__.py
